RESOLVED FIXED195931
[WPE] Fix build warnings because of missing an argument when initializing wpe_input_axis_event
https://bugs.webkit.org/show_bug.cgi?id=195931
Summary [WPE] Fix build warnings because of missing an argument when initializing wp...
Gyuyoung Kim
Reported 2019-03-18 20:45:55 PDT
There are still build warning when building wpe port. I think that these build warnings have been caused by missing to set an argument for the modifier parameter of wpe_input_axis_event. /home/gyuyoung/LGE/starfish/webkit/WebKit/Source/WebKit/UIProcess/API/wpe/ScrollGestureController.cpp: In member function ‘bool WebKit::ScrollGestureController::handleEvent(const wpe_input_touch_event_raw*)’: /home/gyuyoung/LGE/starfish/webkit/WebKit/Source/WebKit/UIProcess/API/wpe/ScrollGestureController.cpp:59:13: warning: missing initializer for member ‘wpe_input_axis_event::modifiers’ [-Wmissing-field-initializers] }; ^ /home/gyuyoung/LGE/starfish/webkit/WebKit/Source/WebKit/UIProcess/API/wpe/ScrollGestureController.cpp:71:13: warning: missing initializer for member ‘wpe_input_axis_event::modifiers’ [-Wmissing-field-initializers] };
Attachments
Patch (2.12 KB, patch)
2019-03-18 21:01 PDT, Gyuyoung Kim
no flags
Gyuyoung Kim
Comment 1 2019-03-18 21:01:03 PDT
Gyuyoung Kim
Comment 2 2019-03-18 23:46:17 PDT
If 0 is a wrong value for the modifier, please let me know.
Adrian Perez
Comment 3 2019-03-19 06:20:06 PDT
Comment on attachment 365118 [details] Patch Patch LGTM → informal r+
Gyuyoung Kim
Comment 4 2019-03-19 18:13:12 PDT
Thanks Adrian and Michael!
WebKit Commit Bot
Comment 5 2019-03-19 18:38:18 PDT
Comment on attachment 365118 [details] Patch Clearing flags on attachment: 365118 Committed r243184: <https://trac.webkit.org/changeset/243184>
WebKit Commit Bot
Comment 6 2019-03-19 18:38:19 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.