[WPE] Fix build warnings because of missing an argument when initializing wpe_input_axis_event https://bugs.webkit.org/show_bug.cgi?id=195931

Patch by Gyuyoung Kim <gyuyoung.kim@lge.com> on 2019-03-19
Reviewed by Michael Catanzaro.

There are still build warnings when building wpe port. It looks like
these build warnings have been caused by missing to set an argument
for the modifier parameter of wpe_input_axis_event. This patch sets 0
for the modifier argument to avoid the build warnings.

* UIProcess/API/wpe/ScrollGestureController.cpp:
(WebKit::ScrollGestureController::handleEvent):

Canonical link: https://commits.webkit.org/210252@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243184 268f45cc-cd09-0410-ab3c-d52691b4dbfc