Source/WebKit/UIProcess/API/wpe/ScrollGestureController.cpp
@@ -55,7 +55,7 @@ bool ScrollGestureController::handleEvent(const struct wpe_input_touch_event_raw
             m_axisEvent = {
                 wpe_input_axis_event_type_motion,
                 touchPoint->time, m_start.x, m_start.y,
-                2, (touchPoint->y - m_offset.y)
+                2, (touchPoint->y - m_offset.y), 0
             };
             m_offset.x = touchPoint->x;
             m_offset.y = touchPoint->y;
@@ -67,7 +67,7 @@ bool ScrollGestureController::handleEvent(const struct wpe_input_touch_event_raw
             m_handling = false;
             m_axisEvent = {
                 wpe_input_axis_event_type_null,
-                0, 0, 0, 0, 0
+                0, 0, 0, 0, 0, 0
             };
             return true;
         }
